--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "chrome",
             "request": "launch",
             "name": "Open index.html",
-            "file": "c:\\Users\\jorge\\OneDrive\\Documents\\GitHub\\JorgeVieira22\\SITE\\index.html"
+            "file": ""
         }
     ]
 }
